--- a/eu.html
+++ b/eu.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="eu.css">
     <title>Sobre Mim</title>
 </head>
+    <!-- Pequena edição para permitir commit -->
+
 <body>
     <nav>
         <ul>
